<resources>
    <string name="app_name">ConsumerApp</string>
    <string name="id">ID: </string>
    <string name="id_item">Id</string>
    <string name="type_item">type</string>
    <string name="type">Type: </string>
    <string name="user">User</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="repositories">Repositories</string>
    <string name="insert_name">Masukkan Nama User</string>
    <string name="user_details">Detail Information</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="fav_button" translatable="false">Favorite</string>
    <string name="search">Search</string>
    <string name="no_dataUser">No Data Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="setting">Setting</string>
    <string name="snackBarMessage">Alarm Have Already</string>
    <string name="alarm_cancel">Alarm Canceled</string>
    <string name="reminder_setting">Reminder</string>
    <string name="daily_reminder">Reminder at 09:00 AM</string>
    <string name="set_alarm">setting Alarm</string>
    <string name="message_reminder">Let`s find favourite user on Github</string>
    <string name="favorite">Favorite</string>

    <string name="failed_load">No users liked available</string>
    <string name="one_user_added">User have added</string>
    <string name="user_delete">One Item Have Already Delete</string>
</resources>