<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <!--   Follower -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

            </LinearLayout>
            <!--                        Following -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repositories"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repositories"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>