<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:id="@+id/cv_user"
    app:cardBackgroundColor="@color/teal_700">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.182"
            app:layout_constraintStart_toEndOf="@+id/item_avatar"
            app:layout_constraintTop_toTopOf="@id/item_avatar" />

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_baseline_account_box_white"
            app:layout_constraintBottom_toTopOf="@+id/iv_company"
            app:layout_constraintStart_toEndOf="@+id/item_avatar"
            app:layout_constraintTop_toTopOf="@+id/tv_item_username" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <ImageView
            android:id="@+id/iv_company"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_baseline_business_24"
            app:layout_constraintStart_toEndOf="@+id/item_avatar"
            app:layout_constraintTop_toTopOf="@+id/tv_item_company" />

        <TextView
            android:id="@+id/tv_item_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/company"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>